Started working on adding loading of user profile pictures, but didn't get it to work.

--- a/TwitchVRNotifications/MainWindow.xaml
+++ b/TwitchVRNotifications/MainWindow.xaml
@@ -7,15 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button x:Name="button" Content="Test" HorizontalAlignment="Left" Margin="10,119,0,0" VerticalAlignment="Top" Width="73" Height="35" Click="button_Click"/>
+        <Button x:Name="button" Content="Test" HorizontalAlignment="Left" Margin="10,159,0,0" VerticalAlignment="Top" Width="73" Height="35" Click="button_Click"/>
         <TextBox x:Name="textBox_AuthToken" HorizontalAlignment="Left" Height="23" Margin="139,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="248" Text="text"/>
         <Label x:Name="label" Content="Twitch username:" HorizontalAlignment="Left" Margin="33,10,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1" Content="Authentication token:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="textBox_UserName" HorizontalAlignment="Left" Height="23" Margin="139,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="text"/>
-        <Button x:Name="button_Connect" Content="Connect" HorizontalAlignment="Left" Margin="139,144,0,0" VerticalAlignment="Top" Width="120" Click="button_Connect_Click"/>
-        <Button x:Name="button_Save" Content="Save" HorizontalAlignment="Left" Margin="139,119,0,0" VerticalAlignment="Top" Width="120" Click="button_Save_Click"/>
+        <Button x:Name="button_Connect" Content="Connect" HorizontalAlignment="Left" Margin="139,184,0,0" VerticalAlignment="Top" Width="120" Click="button_Connect_Click"/>
+        <Button x:Name="button_Save" Content="Save" HorizontalAlignment="Left" Margin="139,159,0,0" VerticalAlignment="Top" Width="120" Click="button_Save_Click"/>
         <TextBox x:Name="textBox_Needle" HorizontalAlignment="Left" Height="23" Margin="139,76,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="label2" Content="Needle:" HorizontalAlignment="Left" Margin="84,72,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label3" Content="Client-ID:" HorizontalAlignment="Left" Margin="75,103,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox_ClientID" HorizontalAlignment="Left" Height="23" Margin="139,107,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="248"/>
 
     </Grid>
 </Window>
