--- a/TwitchVRNotifications/MainWindow.xaml
+++ b/TwitchVRNotifications/MainWindow.xaml
@@ -20,6 +20,7 @@
         <TextBox x:Name="textBox_ClientID" HorizontalAlignment="Left" Height="23" Margin="139,107,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="248"/>
         <Label x:Name="label4" Content="Auto-connect chat:" HorizontalAlignment="Left" Margin="23,232,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="checkBox_AutoConnectChat" Content="" HorizontalAlignment="Left" Margin="139,238,0,0" VerticalAlignment="Top"/>
+        <Image x:Name="imageDebug" HorizontalAlignment="Left" Height="100" Margin="287,159,0,0" VerticalAlignment="Top" Width="100"/>
 
     </Grid>
 </Window>
