--- a/TwitchVRNotifications/MainWindow.xaml
+++ b/TwitchVRNotifications/MainWindow.xaml
@@ -10,17 +10,17 @@
         <Button x:Name="button_Test" Content="Test notification" HorizontalAlignment="Left" Margin="314,202,0,0" VerticalAlignment="Top" Width="138" Height="23" Click="button_Test_Click"/>
         <TextBox x:Name="textBox_AuthToken" HorizontalAlignment="Left" Height="23" Margin="139,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="248" Text="text" LostFocus="textBox_AuthToken_LostFocus"/>
         <Label x:Name="label" Content="Twitch username:" HorizontalAlignment="Left" Margin="33,10,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label1" Content="Authentication token:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="Chat auth token:" HorizontalAlignment="Left" Margin="37,41,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="textBox_UserName" HorizontalAlignment="Left" Height="23" Margin="139,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="text" LostFocus="textBox_UserName_LostFocus"/>
         <Button x:Name="button_Connect" Content="Connect" HorizontalAlignment="Left" Margin="392,45,0,0" VerticalAlignment="Top" Width="60" Click="button_Connect_Click" Height="22"/>
         <Button x:Name="button_Save" Content="Save settings" HorizontalAlignment="Left" Margin="10,291,0,0" VerticalAlignment="Top" Width="122" Click="button_Save_Click"/>
         <TextBox x:Name="textBox_Needle" HorizontalAlignment="Left" Height="23" Margin="139,76,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="120" LostFocus="textBox_Needle_LostFocus"/>
-        <Label x:Name="label2" Content="Needle:" HorizontalAlignment="Left" Margin="84,72,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label3" Content="Client-ID:" HorizontalAlignment="Left" Margin="75,103,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2" Content="Filter messages on:" HorizontalAlignment="Left" Margin="23,72,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label3" Content="Kraken API client-ID:" HorizontalAlignment="Left" Margin="16,103,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="textBox_ClientID" HorizontalAlignment="Left" Height="23" Margin="139,107,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="248" LostFocus="textBox_ClientID_LostFocus"/>
         <CheckBox x:Name="checkBox_AutoConnectChat" Content="Auto-connect chat" HorizontalAlignment="Left" Margin="334,16,0,0" VerticalAlignment="Top" Checked="checkBox_AutoConnectChat_Checked" Unchecked="checkBox_AutoConnectChat_Unchecked"/>
         <TextBox x:Name="textBox_PlaceholderLogo" HorizontalAlignment="Left" Height="23" Margin="139,139,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="248" LostFocus="textBox_PlaceholderLogo_LostFocus"/>
-        <Label x:Name="label5" Content="Placeholder logo:" HorizontalAlignment="Left" Margin="32,135,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label5" Content="Default logo file/url:" HorizontalAlignment="Left" Margin="18,135,0,0" VerticalAlignment="Top"/>
         <Button x:Name="button_Browse" Content="Browse" HorizontalAlignment="Left" Margin="392,139,0,0" VerticalAlignment="Top" Width="60" Click="button_Browse_Click" Height="22"/>
         <Button x:Name="button_InitOpenVR" Content="Init OpenVR" HorizontalAlignment="Left" Margin="332,291,0,0" VerticalAlignment="Top" Width="120" Click="button_InitOpenVR_Click"/>
         <TextBox x:Name="textBox_TestUsername" HorizontalAlignment="Left" Height="23" Margin="139,202,0,0" TextWrapping="Wrap" Text="text" VerticalAlignment="Top" Width="170" LostFocus="textBox_TestUsername_LostFocus"/>
@@ -28,6 +28,14 @@
         <CheckBox x:Name="checkBox_AutoSave" Content="Auto-save" HorizontalAlignment="Left" Margin="139,294,0,0" VerticalAlignment="Top" Checked="checkBox_AutoSave_Checked"/>
         <Label x:Name="label4" Content="Test username:" HorizontalAlignment="Left" Margin="44,198,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label6" Content="Test message:" HorizontalAlignment="Left" Margin="49,229,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="457,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top">
+            <Hyperlink NavigateUri="https://twitchapps.com/tmi/" Click="ClickedURL">Get chat token</Hyperlink>
+        </TextBlock>
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="392,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top">
+            <Hyperlink NavigateUri="https://www.twitch.tv/settings/connections" Click="ClickedURL">Get client-ID</Hyperlink>, <Hyperlink NavigateUri="https://blog.twitch.tv/client-id-required-for-kraken-api-calls-afbb8e95f843" Click="ClickedURL">instructions</Hyperlink>
+            
+        </TextBlock>
+        <CheckBox x:Name="checkBox_FilterOn" Content="On" HorizontalAlignment="Left" Margin="264,78,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
